--- a/src/myapp/package.json
+++ b/src/myapp/package.json
@@ -8,21 +8,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.2.2",
-    "@react-native-community/slider": "^1.0.4",
-    "@react-native-community/viewpager": "^1.1.5",
+    "@react-native-community/async-storage": "^1.3.3",
+    "@react-native-community/viewpager": "^1.1.6",
     "axios": "^0.18.0",
     "keymirror": "^0.1.1",
     "moment": "^2.24.0",
     "ramda": "^0.26.1",
     "react": "16.8.3",
-    "react-native": "0.59.2",
+    "react-native": "0.59.5",
     "react-native-action-button": "^2.8.5",
-    "react-native-gesture-handler": "^1.1.0",
-    "react-native-modal-datetime-picker": "^6.1.0",
+    "react-native-gesture-handler": "^1.2.0",
+    "react-native-modal-datetime-picker": "^7.4.0",
+    "react-native-sentry": "^0.42.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.5.1",
-    "react-redux": "^6.0.1",
+    "react-navigation": "^3.9.1",
+    "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
@@ -31,21 +31,26 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.0",
-    "@babel/runtime": "^7.4.2",
-    "@react-native-community/eslint-config": "0.0.3",
-    "babel-jest": "24.5.0",
-    "eslint": "5.15.3",
-    "jest": "24.5.0",
+    "@babel/core": "7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "@react-native-community/eslint-config": "0.0.4",
+    "babel-jest": "24.7.1",
+    "eslint": "5.16.0",
+    "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3",
-    "reactotron-react-native": "^3.2.1",
+    "react-test-renderer": "16.8.6",
+    "reactotron-react-native": "^3.2.2",
     "reactotron-redux": "^3.1.0",
-    "reactotron-redux-saga": "^4.2.1",
+    "reactotron-redux-saga": "^4.2.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "remote-redux-devtools": "^0.5.16"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
